--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
   <style>
     body { font-family: Arial; margin: 20px; background:#f6f7fb; }
     h2 { color:#2a7f62; }
-    input, select, button { margin:4px; padding:6px 10px; border-radius:4px; }
+    input, select, button { margin:6px 0; padding:8px 12px; border-radius:4px; border:1px solid #ccc; }
     button { background:#2a7f62; color:#fff; border:none; cursor:pointer; }
+    button:hover { opacity:0.9; }
+    .logout-btn { background:#c0392b; margin-top:10px; }
     .small { font-size:12px; color:#555; }
-    table { border-collapse: collapse; width:100%; margin-top:12px; }
+    table { border-collapse: collapse; width:100%; margin-top:12px; min-width:600px; }
     th, td { border:1px solid #e6eef7; padding:6px; text-align:left; }
     th { background:#f3f7fb; }
     .msg { margin:8px 0; color:#2a7f62; font-weight:600; }
+    .scroll-container { overflow-x:auto; }
+    /* Center login box */
+    #loginDiv {
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      height:100vh;
+    }
+    #loginDiv input, #loginDiv button { width:250px; }
   </style>
 </head>
 <body>
@@ -22,7 +34,7 @@
     <input type="text" id="nationalId" placeholder="National ID">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
-    <div id="loginMsg" style="color:red;"></div>
+    <div id="loginMsg" style="color:red; margin-top:8px;"></div>
   </div>
 
   <div id="dashboardDiv" style="display:none;">
@@ -33,8 +45,11 @@
         <option value="">--select plot--</option>
       </select>
     </div>
+    <button class="logout-btn" onclick="logout()">Logout</button>
 
-    <div id="tenantsContainer"></div>
+    <div class="scroll-container">
+      <div id="tenantsContainer"></div>
+    </div>
     <div id="waitMsg" class="msg" style="display:none;">Processing…</div>
   </div>
 
@@ -142,6 +157,14 @@ async function receivePayment(tenantId){
   hideWait();
   alert(res.message);
   loadTenants();
+}
+
+function logout(){
+  currentNationalId="";
+  document.getElementById("dashboardDiv").style.display="none";
+  document.getElementById("loginDiv").style.display="flex";
+  document.getElementById("nationalId").value="";
+  document.getElementById("password").value="";
 }
 </script>
 </body>
