--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div id="loginDiv">
-    <h2>Landlord Login</h2>
+    <h2>Login to Receive Rent</h2>
     <input type="text" id="nationalId" placeholder="National ID">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
