--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 </head>
 <body>
   <div id="loginDiv">
+    <!-- Add Font Awesome for icons (if not already included above) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+<!-- Rent Collection Features Section -->
+<div style="margin: 20px auto; max-width: 600px; padding: 20px; background: #ffffffcc; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+  <h3 style="color:#2a7f62; font-size: 20px; margin-bottom: 15px; text-align:center;">Rent Collection Dashboard</h3>
+  <ul style="list-style: none; padding-left: 0; color:#333; font-size: 16px; line-height: 1.8;">
+    <li><i class="fas fa-filter" style="color:#2a7f62; margin-right:8px;"></i> Filter and view <strong>plots/buildings</strong> you own</li>
+    <li><i class="fas fa-hand-holding-usd" style="color:#2a7f62; margin-right:8px;"></i> Receive <strong>rent payments</strong> securely</li>
+    <li><i class="fas fa-paper-plane" style="color:#2a7f62; margin-right:8px;"></i> Instantly send <strong>SMS confirmation</strong> to tenants</li>
+    <li><i class="fas fa-receipt" style="color:#2a7f62; margin-right:8px;"></i> Automatically update tenant <strong>status to Paid</strong></li>
+    <li><i class="fas fa-chart-line" style="color:#2a7f62; margin-right:8px;"></i> Get a <strong>clear overview</strong> of all payments</li>
+  </ul>
+</div>
+
     <h2>Login to Receive Rent</h2>
     <input type="text" id="nationalId" placeholder="National ID">
     <input type="password" id="password" placeholder="Password">
