--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
     <h2>Login to Receive Rent</h2>
-    <input type="text" id="nationalId" placeholder="National ID">
+    <input type="text" id="nationalId" placeholder="National ID OR User ID">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
     <div id="loginMsg" style="color:red; margin-top:8px;"></div>
