--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     /* Hide text inside disabled selects */
     select.disabled-hidden:disabled {
-      color: transparent;
+      color: black;
     }
   </style>
 </head>
