--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </ul>
     </div>
 
-    <h2>Login to Receive Rent</h2>
+    <h2>LOGIN TO RECEIVE RENT</h2>
     <input type="text" id="nationalId" placeholder="National ID OR User ID">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
